--- a/output/archive.html
+++ b/output/archive.html
@@ -59,6 +59,10 @@
 <article class="listpage"><header><h1>Archiv</h1>
     </header><ul class="postlist">
 <li>
+<a href="2017/index.html">2017</a>
+            (1)
+        </li>
+<li>
 <a href="2016/index.html">2016</a>
             (1)
         </li>
